sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:12: error: not found: value n
			if (plusPetit(N-i,n-i-1)) {
                                          ^AlgCocktailSort1:13: error: not found: value n
				echange(N-i,n-i-1)
                                            ^