sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
	var aEchange:Boolean = true
	var N:Int = getNombreValeurs 
	while(aEchange) {
		aEchange = false
		for(i<- 0 to N-2){
			if (plusPetit(i+1,i)) {
				echange(i+1,i)
				aEchange=true
			}
			if (plusPetit(N-i,n-i-1)) {
				echange(N-i,n-i-1)
				aEchange=true
			}
		}
	}
}
